--- a/package.json
+++ b/package.json
@@ -1,6 +1,22 @@
 {
+  "name": "automated_db_package_deployment",
+  "description": "Automated DB Package Deployment, A.K.A. APD",
+  "main": "app.js",
+  "scripts": {
+    "build": "npx tsc",
+    "start": "node app.js",
+    "dev": "concurrently \"npx tsc --watch\" \"nodemon -q app.js\""
+  },
   "dependencies": {
+    "express": "^4.18.3",
     "iconv-lite": "^0.6.3",
     "oracledb": "^6.3.0"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.21",
+    "@types/node": "^20.11.5",
+    "concurrently": "^8.2.2",
+    "nodemon": "^3.0.3",
+    "typescript": "^5.3.3"
   }
 }
