--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "build": "npx tsc",
     "start": "node app.js",
-    "dev": "concurrently \"npx tsc --watch\" \"nodemon -q app.js\""
+    "dev": "concurrently \"npx tsc --watch\" \"nodemon -q app.js\"",
+    "test": "jest"
   },
   "dependencies": {
     "express": "^4.18.3",
@@ -14,9 +15,15 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
+    "@types/jest": "^29.5.12",
     "@types/node": "^20.11.5",
+    "@types/supertest": "^6.0.2",
     "concurrently": "^8.2.2",
+    "jest": "^29.7.0",
     "nodemon": "^3.0.3",
+    "supertest": "^6.3.4",
+    "ts-jest": "^29.1.2",
+    "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
   }
 }
