--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "express": "^4.18.3",
+    "googleapis": "^133.0.0",
     "iconv-lite": "^0.6.3",
     "oracledb": "^6.3.0"
   },
