--- a/tsconfig.json
+++ b/tsconfig.json
@@ -107,5 +107,5 @@
     "skipLibCheck": true /* Skip type checking all .d.ts files. */
   },
 
-  "exclude": ["jest.config.ts", "*.test.ts"]
+  "exclude": ["jest.config.ts", "**/*.test.ts"]
 }
