--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/node": "^20.11.5",
     "@types/supertest": "^6.0.2",
     "concurrently": "^8.2.2",
+    "dotenv": "^16.4.5",
     "jest": "^29.7.0",
     "nodemon": "^3.0.3",
     "supertest": "^6.3.4",
