--- a/package.json
+++ b/package.json
@@ -9,10 +9,14 @@
     "test": "jest"
   },
   "dependencies": {
+    "@types/morgan": "^1.9.9",
     "express": "^4.18.3",
     "googleapis": "^133.0.0",
     "iconv-lite": "^0.6.3",
-    "oracledb": "^6.3.0"
+    "morgan": "^1.10.0",
+    "oracledb": "^6.3.0",
+    "winston": "^3.12.0",
+    "winston-daily-rotate-file": "^5.0.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
