--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.12",
     "@types/node": "^20.11.5",
+    "@types/oracledb": "^6.2.3",
     "@types/supertest": "^6.0.2",
     "concurrently": "^8.2.2",
     "dotenv": "^16.4.5",
