--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@types/morgan": "^1.9.9",
     "axios": "^1.6.7",
+    "ejs": "^3.1.9",
     "express": "^4.18.3",
     "googleapis": "^133.0.0",
     "iconv-lite": "^0.6.3",
